Changes in version 2.7-0

  o Better handling of discrete numeric variables (after suggestions by Ethan Harris).
  
  o Fix clipboard data set input to work on macOS.

Changes in version 2.6-1

  o Restore older version of splitCmd().
  
  o For GLMs and GLMMs, provide confidence intervals for exponentiated coefficients for models using log or logit link (suggestion of Tan Chuen Seng).
  
  o Make listTwoLevelFactors() work properly for logical and character variables  (treated as factors) with NAs (problem pointed out by Vilmantas Gegzna).
  
  o Insure that data set columns are usable in the Rcmdr, e.g., excluding list columns (problem pointed out by Vilmantas Gegzna).
  
  o Change instances of class(x) == "y" to inherits(x, "y").
  
  o Use apalike rather than apa BiBTeX package in Getting Started vignette (latter has been removed from TeXLive, reported by Brian Ripley).

Changes in version 2.6-0

  o Linear and generalized linear mixed models dialogs added.
  
  o Made editDataset() with data.frame method (suggestion of Ulrike Gromping).
  
  o New R Commander hex sticker.
  
  o Small fixes and improvements.
  
  o Updated translations (with thanks to): Chinese (Tsung-wu Ho), Indonesian (I Made Tirta), Japanese (Takaharu Araki), Polish (Lukasz Daniel), Romanian (Adrian Dusa),  Russian (Alexey Shipunov), Slovenian (Matjaz Jeran), Spanish (Manuel Munoz Marquez).
  
Changes in version 2.5-3

  o Updated Slovenian translation (thanks to Matjaz Jeran).

  o Small fixes.

Changes in version 2.5-2

  o Updated Korean translation (thanks to Jong-Hwa Shin).
  
  o Fixes to Chinese translation (thanks to Tsung-wu Ho).
  
  o No longer re-export utils::data() (suggestion of Brian Ripley).
  
  o Small fixes.
  
Changes in version 2.5-1

  o Updated translations (with thanks): Basque (Jose Ramon Rueda), French (Milan Bouchet-Valat), Indonesian (I Made Tirta), Japanese (Takaharu Araki).
  
  o Depend on R >= version 3.5.0.

Changes in version 2.5-0
